--- a/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
+++ b/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
@@ -1,86 +1,30 @@
 /*todo @Feery 优化此文件, 保持最小引用 去除冗余代码*/
-.antd-social-media-modal {
-	> div {
-		height: 100%;
-		width: 100%;
-		margin: 0;
-		max-width: 100%;
-		padding: 0;
-		
-		:global {
-			border-radius: 20px;
-			padding: 32px;
-			.ant-modal-content {
-				width: fit-content;
-			}
-			.ant-modal-body{
-				padding: 0;
-			}
-			.ant-modal-close{
-				top:32px;
-				right: 24px;
-			}
-			
-		}
+
+.edit-social-item:first-child {
+	.sub-title {
+		margin: 0 0 12px 0;
 	}
 }
-.setting-tab {
-	.style() {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		padding: 8px 16px;
-		width: 280px;
-		margin-bottom: 8px;
-		height: 40px;
-		background: #fcfcfc;
-		border-radius: 8px;
-		font-weight: 600;
-		font-size: 15px;
-		line-height: 24px;
-		cursor: pointer;
-		user-select: none;
-		
-	}
-	.style();
-	
-	&:hover {
-		background: #efefef;
-	}
-	
-	&-selected {
-		.style();
-		color: #6f767e;
-		background: #efefef;
-	}
-}
-
-.edit-social-item:first-child{
-	.sub-title{
-		margin: 0 0 12px 0;}
-	}
-
 .sub-title {
+	width: 100%;
 	user-select: none;
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 24px;
 	color: #33383f;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	flex-flow: row nowrap;
 	height: 28px;
 	align-items: center;
 	margin: 30px 0 12px 0;
 }
-
 .divider {
 	content: '';
 	margin: 48px 0;
 	border-bottom: 1px solid #efefef;
 	width: 660px;
 }
-
 .container {
 	padding: 24px;
 	border-radius: 12px;
@@ -92,110 +36,5 @@
 	height: fit-content;
 }
 
-.net-info {
-	user-select: none;
-	display: inline-flex;
-	align-items: center;
-	font-size: 14px;
-	font-weight: 600;
-	line-height: 28px;
-	margin-bottom: 0px;
-}
-
-.pic-box {
-	user-select: none;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	margin: 32px 0px 31px
-}
-
-.settings-title {
-	user-select: none;
-	margin-bottom: 8px;
-	color: #b1b5c3;
-	font-size: 12px;
-	font-weight: 700;
-	line-height: 16px;
-}
 
 
-.container {
-	:global {
-		.ant-select-multiple span.ant-select-selection-item {
-			padding: 0px 0px;
-			margin: 0px 2px 0px 0px;
-			background-color: #3772ff;
-			color: white;
-			padding: 6px 16px;
-			border-radius: 12px;
-			height: 40px;
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-			font-size: 16px;
-			justify-content: space-around;
-			min-width: 30px;
-		}
-		
-		& {
-			.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search.voting-type_box--RRbA .ant-select-selector {
-				width: 100%;
-				background: #fcfcfc;
-			}
-		}
-		
-		.ant-select-multiple .ant-select-selection-item-remove svg {
-			margin-left: 8px;
-		}
-		
-		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search {
-			&:local(.voting-type_box) {
-				.ant-select-selector {
-					border: 1px solid #e6e8ec;
-					padding: 1px 2px;
-					border-radius: 12px;
-					height: 48px;
-				}
-				
-				&::placeholder {
-					font-weight: 600;
-					font-size: 14px;
-					line-height: 24px;
-					color: #777e91;
-				}
-				
-				.ant-select-selection-item-remove {
-					display: flex;
-				}
-			}
-		}
-	}
-}
-
-.selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
-	line-height: 42px;
-	height: 40px;
-	width: 100%;
-}
-
-
-.ant-select-multiple .ant-select-selection-item-remove svg {
-	margin-left: 8px;
-}
-
-
-.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search {
-	&:local(.voting-type_box) {
-		.ant-select-selector {
-			border: 2px solid #e6e8ec;
-			padding: 1px 2px;
-			border-radius: 12px;
-			height: 48px;
-		}
-		
-		.ant-select-selection-item-remove {
-			display: flex;
-		}
-	}
-}
