--- a/src/pages/_BussinessComponents/Space-Settings/index.module.less
+++ b/src/pages/_BussinessComponents/Space-Settings/index.module.less
@@ -30,19 +30,27 @@
 	}
 }
 
-
+.title-with-delete{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 28px;
+	margin: 32px 0 12px 0;
+	svg:hover{
+		path{
+			fill:#f21361 ;
+		}
+	}
+}
 .sub-title {
 	user-select: none;
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 24px;
 	color: #33383f;
-	display: flex;
-	justify-content: flex-start;
-	flex-flow: row nowrap;
-	height: 28px;
-	align-items: center;
-	margin: 32px 0 12px 0;
+	width: fit-content;
+	display: inline-block;
 }
 
 .divider {
