--- a/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
+++ b/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
@@ -1,23 +1,30 @@
 /*todo @Feery 优化此文件, 保持最小引用 去除冗余代码*/
+.title-with-delete{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 28px;
+	margin: 30px 0 12px 0;
+	svg:hover{
+		path{
+			fill:#f21361 ;
+		}
+	}
+}
 
 .edit-social-item:first-child {
-	.sub-title {
+	.title-with-delete {
 		margin: 0 0 12px 0;
 	}
 }
 .sub-title {
-	width: 100%;
+	width: fit-content;
 	user-select: none;
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 24px;
 	color: #33383f;
-	display: flex;
-	justify-content: space-between;
-	flex-flow: row nowrap;
-	height: 28px;
-	align-items: center;
-	margin: 30px 0 12px 0;
 }
 .divider {
 	content: '';
