--- a/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
+++ b/src/pages/_BussinessComponents/Edit-Social-Item/index.module.less
@@ -1,11 +1,15 @@
 /*todo @Feery 优化此文件, 保持最小引用 去除冗余代码*/
 .title-with-delete{
+	padding-right: 4px;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	height: 28px;
 	margin: 30px 0 12px 0;
+	svg{
+		cursor:pointer;
+	}
 	svg:hover{
 		path{
 			fill:#f21361 ;
