--- a/src/styles/reaxels.module.less
+++ b/src/styles/reaxels.module.less
@@ -1,7 +1,6 @@
-
-
 /*create-space-modal样式 : */
 @import "./variable.module.less";
+
 .modal-content {
 	.main-title {
 		font-size: 32px;
@@ -95,62 +94,92 @@
 	}
 }
 
-:global(.ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector){
+:global(.ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector) {
 	border-radius: 12px;
 	height: 48px;
 }
-:global(.ant-select-multiple .ant-select-selection-item-remove){
+
+:global(.ant-select-multiple .ant-select-selection-item-remove) {
 	display: flex;
 	align-items: center;
 }
-.container {
-	:global {
-		.ant-select-multiple span.ant-select-selection-item {
-			padding: 0px 0px;
-			margin: 0px 2px 0px 0px;
-			background-color: #3772ff;
-			color: white;
-			padding: 6px 16px;
+.antd-net-select:global(.ant-select){
+	width: 100%;
+	:global{
+		.ant-select-selector{
+			border: 2px solid #e6e8ec;
+			padding: 1px 2px;
 			border-radius: 12px;
-			height: 40px;
+			height: 48px;
+			width: 100%;
+		}
+		.ant-select-selection-item{
 			display: flex;
-			flex-direction: row;
 			align-items: center;
-			font-size: 16px;
-			justify-content: space-around;
-			min-width: 30px;
+			padding-left: 16px;
 		}
-		
-		& {
-			.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search.voting-type_box--RRbA .ant-select-selector {
+	}
+}
+:global {
+	.ant-select{
+		width: 100%;
+	}
+	.ant-select-selector{
+		&::placeholder {
+			font-weight: 600;
+			font-size: 14px;
+			line-height: 24px;
+			color: #777e90;
+		}
+	}
+	
+	.ant-select-multiple span.ant-select-selection-item {
+		padding: 0px 0px;
+		margin: 0px 2px 0px 0px;
+		background-color: #3772ff;
+		color: white;
+		padding: 6px 16px;
+		border-radius: 12px;
+		height: 40px;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		font-size: 16px;
+		justify-content: center;
+		min-width: 30px;
+	}
+	
+	& {
+		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search.voting-type_box--RRbA .ant-select-selector {
+			width: 100%;
+			background: #fcfcfc;
+		}
+	}
+	
+	.ant-select-multiple .ant-select-selection-item-remove svg {
+		margin-left: 8px;
+	}
+	
+	.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search {
+		&:local(.voting-type_box) {
+			.ant-select-selector {
+				border: 2px solid #e6e8ec;
+				padding: 1px 2px;
+				border-radius: 12px;
+				height: 48px;
 				width: 100%;
-				background: #fcfcfc;
 			}
-		}
-		
-		.ant-select-multiple .ant-select-selection-item-remove svg {
-			margin-left: 8px;
-		}
-		
-		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search {
-			&:local(.voting-type_box) {
-				.ant-select-selector {
-					border: 1px solid #e6e8ec;
-					padding: 1px 2px;
-					border-radius: 12px;
-					height: 48px;
-				}
-				
-				&::placeholder {
-					font-weight: 600;
-					font-size: 14px;
-					line-height: 24px;
-					color: #777e91;
-				}
+			
+			&::placeholder {
+				font-weight: 600;
+				font-size: 14px;
+				line-height: 24px;
+				color: #777e91;
 			}
 		}
 	}
 }
+
 
 .selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
 	border-radius: 12px;
@@ -192,9 +221,11 @@
 		:global {
 			border-radius: 32px;
 			padding: 32px;
+			
 			.ant-modal-content {
 				height: 100%;
 			}
+			
 			.ant-modal-body {
 				height: calc(100% - 53px);
 				padding: 0;
