--- a/src/styles/reaxels.module.less
+++ b/src/styles/reaxels.module.less
@@ -47,26 +47,6 @@
 				
 			}
 			
-			//.m-select {
-			//	width: 100%;
-			//	min-height: 48px;
-			//	
-			//	:global {
-			//		.ant-select-selector {
-			//			min-height: 48px;
-			//			background-color: rgb(252, 252, 252);
-			//			border: 1px solid #efefef;
-			//			border-radius: 12px;
-			//		}
-			//		
-			//		.ant-select-selection-item {
-			//			display: flex;
-			//			align-items: center;
-			//			
-			//		}
-			//	}
-			//}
-			
 			.title-wrp {
 				display: flex;
 				flex-direction: row;
@@ -99,32 +79,73 @@
 	height: 48px;
 }
 
+.drop-down-menu {
+	padding: 8px;
+	background: #ffffff;
+	border: 2px solid #e6e8ec;
+	border-radius: 12px;
+	
+	:global(.ant-select-item-option) {
+		height: 48px;
+		background: #ffffff;
+		border-radius: 12px;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		padding: 12px;
+		
+		&:hover {
+			background: #f4f5f6;
+		}
+	}
+}
+
+:global(.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant- select-customize-input).ant-select-selector) {
+	border-color: #777e90;
+	box-shadow: unset;
+}
+
+:global(.ant-select) {
+	&:hover {
+		border-color: #777e90;
+	}
+}
 :global(.ant-select-multiple .ant-select-selection-item-remove) {
 	display: flex;
 	align-items: center;
 }
-.antd-net-select:global(.ant-select){
+
+.antd-net-select:global(.ant-select) {
+	box-shadow: unset;
+	&:hover {
+		border-color: #777e90;
+	}
 	width: 100%;
-	:global{
-		.ant-select-selector{
+	:global {
+		.ant-select-selector {
 			border: 2px solid #e6e8ec;
 			padding: 1px 2px;
 			border-radius: 12px;
 			height: 48px;
 			width: 100%;
+			&:hover {
+				border-color: #777e90;
+			}
 		}
-		.ant-select-selection-item{
+		.ant-select-selection-item {
 			display: flex;
 			align-items: center;
-			padding-left: 16px;
+			padding-left: 6px;
 		}
 	}
 }
+
 :global {
-	.ant-select{
+	.ant-select {
 		width: 100%;
 	}
-	.ant-select-selector{
+	
+	.ant-select-selector {
 		&::placeholder {
 			font-weight: 600;
 			font-size: 14px;
@@ -147,13 +168,6 @@
 		font-size: 16px;
 		justify-content: center;
 		min-width: 30px;
-	}
-	
-	& {
-		.ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search.voting-type_box--RRbA .ant-select-selector {
-			width: 100%;
-			background: #fcfcfc;
-		}
 	}
 	
 	.ant-select-multiple .ant-select-selection-item-remove svg {
@@ -179,20 +193,12 @@
 		}
 	}
 }
-
-
 .selectbox select:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item {
 	border-radius: 12px;
 	line-height: 42px;
 	height: 40px;
 	width: 100%;
 }
-
-
-.ant-select-multiple .ant-select-selection-item-remove svg {
-	margin-left: 8px;
-}
-
 
 .ant-select.ant-select-multiple.ant-select-allow-clear.ant-select-show-search {
 	&:local(.voting-type_box) {
