--- a/src/pages/_BussinessComponents/Select-Social-Btn-Modal/index.module.less
+++ b/src/pages/_BussinessComponents/Select-Social-Btn-Modal/index.module.less
@@ -81,3 +81,20 @@
 	flex-flow: row wrap;
 	align-content: flex-start;
 }
+.select-social-btn:global(.ant-btn){
+	color: rgb(119, 126, 144);
+	font-weight: 700;
+	font-size: 14px;
+	line-height: normal;
+	border: 2px solid rgb(230, 232, 236);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 12px 16px;
+	border-radius: 12px;
+	height: 40px;
+	margin-top: 32px;
+	width: fit-content;
+	background: rgb(255, 255, 255);
+}
+
