--- a/src/pages/_BussinessComponents/Space-Settings/index.module.less
+++ b/src/pages/_BussinessComponents/Space-Settings/index.module.less
@@ -116,6 +116,29 @@
 	transition: unset;
 }
 
+.social-upload-btn:global(.ant-btn){
+	border-radius: 12px;
+	padding: 12px 20px;
+	font-size: 15px;
+	font-weight: 700;
+	line-height: 24px;
+	height: 48px;
+	width: fit-content;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #3772ff;
+	color: #ffffff;
+	transition: unset;
+	border: unset;
+}
+.social-upload-btn:global(.ant-btn[disabled]){
+	color: rgba(0, 0, 0, 0.25);
+	border-color: #d9d9d9;
+	background: #f5f5f5;
+	transition: unset;
+}
+
 .general-bio-text-area:global(.ant-input){
 	padding: 4px;
 	width: 100%;
