--- a/src/pages/Profile/index.module.less
+++ b/src/pages/Profile/index.module.less
@@ -203,7 +203,6 @@
 	align-items: center;
 	background: #e6e8ec;
 	border-radius: 24px;
-	width: 53px;
 	padding: 2px 8px;
 }
 .gray-text-val {
@@ -212,7 +211,7 @@
 	overflow: hidden;
 	text-overflow:ellipsis;
 	white-space: nowrap;
-	width: 28px;
+	max-width: 32px;
 	text-align: left;
 }
 .gray-box-rank {
@@ -221,7 +220,6 @@
 	align-items: center;
 	background: #e6e8ec;
 	border-radius: 24px;
-	width: 68px;
 	padding: 2px 8px;
 }
 
@@ -232,7 +230,7 @@
 	text-overflow:ellipsis;
 	white-space: nowrap;
 	text-align: left;
-	width: 40px;
+	max-width: 40px;
 }
 
 .space-info {
