--- a/src/pages/Profile/index.module.less
+++ b/src/pages/Profile/index.module.less
@@ -66,7 +66,7 @@
 	border: none;
 	&:hover {
 		transition: all .25s ease;
-		background: #f4f5f6;
+		background: #d9d9d9;
 		color: #1a1d1f;
 		
 		svg path {
