--- a/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
+++ b/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
@@ -60,11 +60,22 @@
 	}
 	
 }
-
+.joined-space-container{
+	padding: 16px 8px 16px 8px;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: space-between;
+	width: 56px;
+	background: white;
+	border-radius: 12px 0 0 12px;
+}
 
 .space-avatar {
+	border: 12px;
 	cursor: pointer;
 	object-fit: cover;
+	width: 40px;
+	height: 40px;
 }
 
 
