--- a/src/pages/Test/dxz-plugin-list/index.module.less
+++ b/src/pages/Test/dxz-plugin-list/index.module.less
@@ -1,15 +1,50 @@
 
-
-.plugin-aside-list {	
-	a.ant-dropdown-trigger{
-		width: 24px;
-		height: 24px;
-	}
+.plugin-aside-container{
+	width: 204px;
+	height: 100%;
+	padding: 8px 8px 16px;
+	display: flex;
+	flex-direction: column;
+	background-color: rgb(255, 255, 255);
+	border-radius: 0 12px 12px 0;
+	font-size: 14px;
+	font-weight: 600;
 }
-Button .span{
+.plugin-aside-top{
+	margin-bottom: 24px;
+	background-color: rgb(244, 245, 246);
+	border-radius: 8px;
+	padding: 8px 8px 11px;
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	justify-content: space-between;
+	width: 188px;
+	height: 56px;
+}
+.plugin-aside-space-name{
+	padding: 0px;
+	margin: 0px 43px 0px 16px;
+	font-size: 14px;
+	font-weight: bold;
+	color: rgb(53, 57, 69);
+	font-family: inter;
+	font-style: normal;
+	line-height: 20px;
+	width: 53px;
 	height: 24px;
+	align-items: center;
+	display: flex;
+	user-select: unset;
 }
-.nav{
+.plugin-aside-item{
+	display: flex;
+	width: 100%;
+	flex-direction: row;
+	align-items: center;
+	border-radius: 12px;
+	padding: 8px 16px 8px 8px;
+	transition: all .2s linear;
 	&:hover{
 		background-color: #d9d9d9;
 	}
@@ -17,18 +52,54 @@ Button .span{
 		background-color: #353945;
 		color: #fff;
 	}
-	& {
-		display: flex;
-		width: 100%;
-		flex-direction: row;
-		align-items: center;
-		border-radius: 12px;
-		padding: 8px 16px 8px 8px;
+	&:first-child{
+		margin-bottom: 24px;
 	}
 	p{
-		font-weight: 500;
 		font-size: 14px;
 		line-height: 24px;
 		margin:0px 0px 0px 16px;
 	}
+}
+.plugin-aside-list::-webkit-scrollbar {
+	width: 4px;
+	height: 10px;
+}
+
+.plugin-aside-list::-webkit-scrollbar-thumb {
+	background: #aeaeae;
+	border-radius: 13px;
+	width: 4px;
+	height: 8px;
+}
+
+.plugin-aside-list::-webkit-scrollbar-thumb:hover {
+	background: #333333;
+}
+.plugin-aside-list{
+	display: block;
+	overflow: auto;
+	flex: 1 1 0%;
+	cursor: pointer;
+	user-select: none;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	height: 771px;
+}
+
+.plugin-aside-bottom{
+	border-top: 2px solid #e6e8ec;
+	padding-top: 12px;
+}
+.plugin-center-btn:global(.ant-btn){
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 8px 32px;
+	width: 100%;
+	height: 40px;
+	border: 2px solid #E6E8EC;
+	border-radius: 12px;
 }
