--- a/src/pages/_BussinessComponents/Layout_Header/index.module.less
+++ b/src/pages/_BussinessComponents/Layout_Header/index.module.less
@@ -119,7 +119,7 @@
 	display: flex;
 	height: 100%;
 	overflow: auto;
-	
+	background: #f4f5f6;
 	div {
 		
 		display: flex;
@@ -128,6 +128,7 @@
 	
 	.left-side {
 		background-color: white;
+		margin: 8px 0 0 4px;
 	}
 	
 	.main-content {
