--- a/src/styles/main.module.less
+++ b/src/styles/main.module.less
@@ -79,11 +79,10 @@
 	height: 100%;
 	overflow: auto;
 	background: rgba(244, 244, 244, 0.8);
-	
 	.left-side {
 		height: 100%;
 		display: flex;
-		margin: 8px 0 8px 4px;
+		padding: 8px 0 8px 4px;
 	}
 	
 	.main-content {
