--- a/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
+++ b/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
@@ -69,6 +69,32 @@
 	background: white;
 	border-radius: 12px 0 0 12px;
 }
+.joined-space-tooltip:global(.ant-tooltip){
+	line-height: normal;
+	height: 16px;
+	padding-left: 2px;
+	left: 30px;
+	:global(.ant-tooltip-arrow){
+		display: none;
+	}
+	:global(.ant-tooltip-content){
+		height: 16px;
+	}
+	:global(.ant-tooltip-inner){
+		font-size: 12px;
+		line-height: normal;
+		height: 16px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-flow: row nowrap;
+		width: fit-content;
+		padding: 0;
+		border-radius: 12px;
+		background: #0070f3;
+		color: #ffffff;
+	}
+}
 
 .space-avatar {
 	border: 12px;
