首字母头像,less移动,switch样式改动

--- a/src/pages/Space-Info/index.module.less
+++ b/src/pages/Space-Info/index.module.less
@@ -427,9 +427,22 @@
 	min-width: fit-content;
 	min-height: fit-content;
 	padding-bottom: 64px;
-	
 }
-
+.the-first-letter{
+	background : linear-gradient(90deg, #24FFC3 -0.001%, #42FF40 13.00%, #FCFD43 99.99%);
+	height: 90px;
+	-webkit-text-fill-color: transparent;
+	-webkit-background-clip: text;
+	font-family: "Microsoft YaHei";
+	font-weight: bold;
+	font-size: 100px;
+	line-height: normal;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: fit-content;
+	margin-left: -2px;
+}
 .cover-img {
 	border-radius: 12px 12px 0px 0px;
 	min-width: 100%;
