--- a/src/pages/Profile/index.module.less
+++ b/src/pages/Profile/index.module.less
@@ -156,7 +156,7 @@
 	min-width: 100%;
 	height: 300px;
 	object-fit: cover;
-	object-position: 50% 50%;
+	object-position: left top;
 	user-select: none;
 }
 
@@ -168,12 +168,27 @@
 	border-radius: 132px;
 	border: 4px solid rgb(255, 255, 255);
 	user-select: none;
-}
-
-.my-avatar {
-	border-radius: 132px;
 	width: 132px;
 	height: 132px;
+}
+.the-first-letter{
+	background : linear-gradient(90deg, #24FFC3 -0.001%, #42FF40 13.00%, #FCFD43 99.99%);
+	height: 90px;
+	-webkit-text-fill-color: transparent;
+	-webkit-background-clip: text;
+	font-family: "Microsoft YaHei";
+	font-weight: bold;
+	font-size: 70px;
+	line-height: normal;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: fit-content;
+}
+.my-avatar {
+	border-radius: 124px;
+	width: 124px;
+	height: 124px;
 	object-fit: cover;
 	object-position: 50% 50%;
 	user-select: none;
