--- a/src/pages/Space-Info/index.module.less
+++ b/src/pages/Space-Info/index.module.less
@@ -448,7 +448,7 @@
 	min-width: 100%;
 	height: 300px;
 	object-fit: cover;
-	object-position: 50% 50%;
+	object-position: left top;
 	user-select: none;
 }
 
