--- a/src/pages/Test/dxz-input/index.module.less
+++ b/src/pages/Test/dxz-input/index.module.less
@@ -4,7 +4,7 @@
 			padding: 12px 16px;
 			width: 100%;
 			height: 48px;
-			background: #F4F4F4;
+			background: #F4F5f6;
 			border-radius: 12px;
 			box-shadow: unset;
 			border: 2px solid #f4f4f4;
@@ -12,7 +12,6 @@
 			font-weight: 700;
 			color: #1a1d1f;
 			&:hover{
-				border-color: #f4f4f4;
 				border: 2px solid #E6E8EC;
 			}
 			&:focus{
@@ -29,15 +28,17 @@
 			padding: 4px;
 			width: 100%;
 			height: 112px;
-			background: #F4F4F4;
+			background: #F4F5f6;
 			border-radius: 12px;
 			display: flex;
 			flex-flow: column wrap;
 			width: 840px;
 			height: 112px;
-			border: 2px solid rgba(154, 159, 165, 0.25);
 			border-radius: 12px;
 			box-shadow: unset;
+			&:hover{
+				border: 2px solid #E6E8EC;
+			}
 			&:focus{
 				background: #FFFFFF;
 				border: 2px solid #777E91;
