--- a/src/styles/reaxels.module.less
+++ b/src/styles/reaxels.module.less
@@ -73,7 +73,14 @@
 		}
 	}
 }
-
+.net-ethereum{
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 24px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
 :global(.ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector) {
 	border-radius: 12px;
 	height: 48px;
