--- a/src/pages/Test/dxz-select/index.module.less
+++ b/src/pages/Test/dxz-select/index.module.less
@@ -76,3 +76,40 @@
 	flex-flow: column wrap;
 	width: 100%;
 }
+.single-primary:global(.ant-select-single:not(.ant-select-customize-input)) {
+	width:100% ;
+	:global(.ant-select-selector) {
+		width:100% ;
+		height: 40px;
+		background: #ffffff;
+		border: 2px solid #e6e8ec;
+		border-radius: 12px;
+	}
+	:global(.ant-select-selection-item){
+		display: flex;
+		align-items: center;
+	}
+}
+.drop-down-menu {
+	//&{
+	//	padding: 8px;
+	//	background: #ffffff;
+	//	border: 2px solid #e6e8ec;
+	//	border-radius: 12px;
+	//}
+	//注释部分的样式没生效,写在dropdownStyle里了
+	:global(.ant-select-item-option) {
+		height: 30px;
+		background: #ffffff;
+		border-radius: 12px;
+		display: block;
+		vertical-align: middle;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		padding: 12px;
+		&:hover {
+			background: #f4f5f6;
+		}
+	}
+}
