--- a/src/pages/Test/dxz-create-SBT/index.module.less
+++ b/src/pages/Test/dxz-create-SBT/index.module.less
@@ -71,12 +71,12 @@
 }
 .create-SBT-footer-box{
 	display: flex;
-	flex-direction: row-reverse;
+	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	padding: 16px;
+	padding: 20px 24px;
 	width: 100%;
-	height: 80px;
+	height: 88px;
 	background: #FFFFFF;
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.08);
 	border-radius: 12px;
