joined-space-list

--- a/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
+++ b/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
@@ -2,7 +2,7 @@
 	user-select: none;
 	margin-bottom: 16px;
 	display: flex;
-	transform: translate(0);
+	//transform: translate(0);
 	align-items: center;
 	background-color: #eeeeee;
 	width: fit-content;
