媒体查询joined-space-height

--- a/src/pages/Space-Info/index.module.less
+++ b/src/pages/Space-Info/index.module.less
@@ -425,7 +425,7 @@
 	justify-content: center;
 	flex-flow: column nowrap;
 	min-width: fit-content;
-	min-height: fit-content;
+	height: fit-content;
 	padding-bottom: 64px;
 }
 .the-first-letter{
