--- a/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
+++ b/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
@@ -72,8 +72,24 @@
 	height: 100%;
 	background: white;
 }
+//媒体查询,只适配了显示器和屏宽1540px的电脑
+@media screen and(max-width: 1980px){
+	.joined-space-list{
+		height: 752px;
+	}
+}
+@media (min-width:1280px) and (max-width: 1540px){
+	.joined-space-list{
+		height: 540px;
+	}
+}
+@media screen and (max-width: 1280px){
+	.joined-space-list{
+		height: 540px;
+	}
+}
+
 .joined-space-list{
-	height:763px;
 	background: white;
 	overflow: auto;
 }
