--- a/src/pages/Test/dxz-SBT-revocation/index.module.less
+++ b/src/pages/Test/dxz-SBT-revocation/index.module.less
@@ -1,4 +1,4 @@
-.SBT-add-whitelist-container {
+.SBT-revocation-container {
 	display: flex;
 	flex-flow: column nowrap;
 	width: 100%;
@@ -22,7 +22,7 @@
 	user-select: none;
 	width: 1200px;
 }
-.SBT-add-whitelist-info{
+.SBT-revocation-info{
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: center;
@@ -38,12 +38,12 @@
 	border-radius: 8px;
 	margin-right: 8px;
 }
-.edit-SBT-whitelist{
+.edit-SBT-revocationlist{
 	display: flex;
 	flex-direction: column;
 	
 }
-.SBT-white-item{
+.SBT-revocation-item{
 	display: flex;
 	align-items: center;
 	margin-bottom: 16px;
@@ -56,27 +56,36 @@
 		}
 	}
 }
-.SBT-add-whitelist-main-box{
+.SBT-revocationlist-main-box{
 	padding: 24px;
 	width: 852px;
 	height: 760px;
 	background: #FFFFFF;
 	border-radius: 8px;
 }
-.SBT-whitelist-footer-box{
+.SBT-revocationlist-footer-box{
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: flex-start;
 	align-items: center;
 	padding:16px;
-	width: 100%;
+	width: 852px;
 	height: 80px;
 	background: #FFFFFF;
 	border-radius: 8px;
 	margin-bottom: 48px;
 	margin-top: 8px;
 }
-.SBT-add-whitelist-subtitle{
+.SBT-revocation-footer-mention{
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 24px;
+	margin-left: 25px;
+	color: #FF3B30;
+	margin-bottom: 0;
+	
+}
+.SBT-revocationlist-subtitle{
 	font-weight: 600;
 	font-size: 24px;
 	line-height: 32px;
@@ -124,7 +133,7 @@
 		}
 	}
 }
-.SBT-Whitelist-column-names{
+.SBT-revocationlist-column-names{
 	margin-top: 50px;
 }
 .column-name-address {
