space-dropdown-pop-添加社媒样式

--- a/src/pages/Test/dxz-Space-dropdown-pop/index.module.less
+++ b/src/pages/Test/dxz-Space-dropdown-pop/index.module.less
@@ -16,43 +16,70 @@
 	user-select: none;
 	color: #777e90;
 	
-	p {
+	span {
 		margin: 0px;
 		font-weight: 600;
 		font-size: 14px;
 	}
 }
 
-.pop-list:not(:last-child) {
-	margin-bottom: 16px;
-}
+
 
 .pop-list {
 	transition: color .25s ease;
+	border-radius: 8px;
+	height: 40px;
+	padding: 8px;
 	&:hover {
-		color: #414141;
+		color: #222528;
+		background: #f4f5f6;
 	}
 	
-	&:last-child {
-		transition: color .25s ease;
-		margin-top: 8px;
-		color: #FF3B30;
-		border-radius: 8px;
-		height: 40px;
-		padding: 8px;
-		&:hover{
-			background: #ff3b30;
-			color: #ffffff;
-			svg path{
-				fill: #ffffff;
-			}
+	
+}
+
+.leave-space-btn {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-weight: 600;
+	font-size: 14px;
+	transition: color .25s ease;
+	color: #ff3b30;
+	border-radius: 8px;
+	height: 40px;
+	padding: 8px;
+	&:hover {
+		background: #ff3b30;
+		color: #ffffff;
+		svg path {
+			fill: #ffffff;
+		}
+	}
+}
+.join-space-btn{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	font-weight: 600;
+	font-size: 14px;
+	transition: color .25s ease;
+	color: #0070f3;
+	border-radius: 8px;
+	height: 40px;
+	padding: 8px;
+	&:hover {
+		background: #0070f3;
+		color: #ffffff;
+		svg path {
+			fill: #ffffff;
 		}
 	}
 }
 
 .pop-list:not(:last-child):hover {
 	svg path {
-		fill: #1a1d1f;
+		fill: #222528;
 	}
 }
 
@@ -60,6 +87,7 @@
 	width: 100%;
 	height: 1px;
 	background: #e6e8ec;
+	margin:8px 0;
 }
 
 //:local(.pop-switch) {
@@ -86,15 +114,19 @@
 	min-width: unset;
 	background: #e6e8ec;
 	border-radius: 32px;
-	&:focus{
+	
+	&:focus {
 		box-shadow: unset;
 	}
-	&-checked{
+	
+	&-checked {
 		background: #a5c7ee;
-		:global(.ant-switch-handle){
+		
+		:global(.ant-switch-handle) {
 			left: calc(100% - 18px);
 		}
 	}
+	
 	:global {
 		.ant-switch-handle {
 			margin-left: 2px;
@@ -102,6 +134,7 @@
 			height: 12px;
 			border-radius: 32px;
 			top: 4px;
+			
 			&::before {
 				background: #0070f3;
 				border-radius: 32px;
