--- a/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
+++ b/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
@@ -70,12 +70,12 @@
 	padding:16px 0;
 	border-radius: 12px 0 0 12px;
 	background: white;
-	height: 100%;
+	height: 89rem;
 }
 
 
 .joined-space-list{
-	height: 752px;
+	height: 77.5rem;
 	background: white;
 	overflow: auto;
 }
