joined-space-list圆角遮盖

--- a/src/pages/Test/dxz-plugin-list/index.module.less
+++ b/src/pages/Test/dxz-plugin-list/index.module.less
@@ -1,14 +1,15 @@
 
 .plugin-aside-container{
-	width: 204px;
+	width: 212px;
 	height: 100%;
-	padding: 8px 8px 16px;
+	padding: 8px 8px 16px 16px;
 	display: flex;
 	flex-direction: column;
 	background-color: rgb(255, 255, 255);
 	border-radius: 0 12px 12px 0;
 	font-size: 14px;
 	font-weight: 600;
+	margin-left: -9px;
 }
 .plugin-aside-top{
 	margin-bottom: 24px;
