--- a/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
+++ b/src/pages/_BussinessComponents/Layout-Joined-Space-List/index.module.less
@@ -68,7 +68,7 @@
 }
 .joined-space-container{
 	padding:16px 0;
-	border-radius: 12px 0 0 12px;
+	border-radius: 12px;
 	background: white;
 	height: 100%;
 }
