--- a/src/pages/Test/dxz-New-SBT/index.module.less
+++ b/src/pages/Test/dxz-New-SBT/index.module.less
@@ -1,8 +1,7 @@
 .create-SBT-container {
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: center;
-	width: 100%;
+	margin: 0 auto;
 	line-height: normal;
 }
 
@@ -69,7 +68,8 @@
 	padding: 24px;
 	margin-bottom: 8px;
 }
-.create-SBT-footer-box{
+
+.create-SBT-footer-box {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -77,10 +77,11 @@
 	padding: 20px 24px;
 	width: 100%;
 	height: 88px;
-	background: #FFFFFF;
+	background: #ffffff;
 	border-radius: 8px;
 	margin-bottom: 48px;
 }
+
 .sub-title {
 	font-weight: 600;
 	font-size: 14px;
@@ -89,7 +90,8 @@
 	padding-bottom: 12px;
 	user-select: none;
 }
-.net-ethereum{
+
+.net-ethereum {
 	font-weight: 600;
 	font-size: 14px;
 	line-height: 24px;
@@ -97,26 +99,48 @@
 	flex-direction: row;
 	align-items: center;
 }
+
 .sub-title-with-item {
 	margin-bottom: 32px;
+	
 	&:last-child {
 		margin-bottom: 0;
 	}
 }
 
-.upload-file-box {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	padding: 12px;
-	width: 100%;
-	height: 200px;
-	background: #f4f5f6;
-	border-radius: 12px;
+.upload-file-container {
+	
+	&-empty{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 200px;
+		background: #f4f5f6;
+		border-radius: 12px;
+		transition: all .25s linear;
+	}
+	&-filling {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 448px;
+		height: 448px;
+		background: #f4f5f6;
+		border-radius: 12px;
+		transition: all .25s linear;
+		
+		&:hover{
+			
+			.upload-file-filling {
+				opacity: 1;
+			}
+		}
+	}
 }
 
 .upload-file {
+	z-index: 0;
 	font-weight: 700;
 	font-size: 15px;
 	display: flex;
@@ -133,54 +157,88 @@
 	user-select: none;
 	transition: all .25s linear;
 	cursor: pointer;
-	&:hover{
-		box-shadow:0px 0px 36px 2px rgb(147 147 150 / 39%);
+	
+	&:hover {
+		box-shadow: 0px 0px 36px 2px rgb(147 147 150 / 39%);
 	}
 }
+/*已上传图片的upload button , 仅hover时显示*/
+.upload-file-filling {
+	opacity: 0;
+	z-index: 0;
+	font-weight: 700;
+	font-size: 15px;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	background: #fcfcfc;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	user-select: none;
+	transition: all .25s linear;
+	
+	&>.upload-file-filling-button{
+		
+		cursor: pointer;
+		&:hover {
+			box-shadow: 0px 0px 36px 2px rgb(147 147 150 / 39%);
+		}
+	}
+	
+}
 
-.access-some-intro{
+.access-some-intro {
 	font-weight: 500;
 	font-size: 13px;
-	color: #777E91;
+	color: #777e91;
 	margin-top: 12px;
 }
 
-.add-new-SBT-feature-btn:global(.ant-btn){
+.add-new-SBT-feature-btn:global(.ant-btn) {
 	padding: 10px;
 	width: 40px;
 	height: 40px;
-	background: #FFFFFF;
-	border: 2px solid #E6E8EC;
+	background: #ffffff;
+	border: 2px solid #e6e8ec;
 	border-radius: 12px;
 	display: flex;
 	margin-top: 12px;
 	transition: all .25s linear;
-	&:hover{
+	
+	&:hover {
 		border-color: #313436;
-		svg path{
+		
+		svg path {
 			fill: #313436;
 		}
 	}
 }
+
 //todo:修改ant-select-focused时默认的box-shadow & border-color样式
 
 .new-SBT-Select-type:global(.ant-select-single:not(.ant-select-customize-input)) {
-	&:hover{
+	&:hover {
 		:global(.ant-select-selector) {
 			border-color: #777e90;
 		}
 	}
+	
 	:global(.ant-select-selector) {
 		height: 48px;
 		background: #ffffff;
 		border: 2px solid #e6e8ec;
 		border-radius: 12px;
 	}
-	:global(.ant-select-selection-item){
+	
+	:global(.ant-select-selection-item) {
 		display: flex;
 		align-items: center;
 	}
 }
+
 .drop-down-menu {
 	//&{
 	//	padding: 8px;
@@ -199,6 +257,7 @@
 		flex-direction: row;
 		align-items: center;
 		padding: 12px;
+		
 		&:hover {
 			background: #f4f5f6;
 		}
@@ -210,12 +269,15 @@
 	font-size: 14px;
 	display: flex;
 	flex-flow: column wrap;
+	
 	:global {
 		.ant-checkbox-wrapper {
 			margin-bottom: 12px;
-			&:last-child{
+			
+			&:last-child {
 				margin-bottom: 0;
 			}
+			
 			span {
 				display: flex;
 				flex-direction: row;
@@ -223,32 +285,39 @@
 				height: 24px;
 			}
 		}
+		
 		.ant-checkbox + span {
 			padding-right: 12px;
 			padding-left: 12px;
 		}
-		.ant-checkbox-wrapper{
+		
+		.ant-checkbox-wrapper {
 			align-items: center;
 			height: 24px;
 		}
+		
 		.ant-checkbox-wrapper + .ant-checkbox-wrapper {
 			margin-left: 0;
 		}
-		.ant-checkbox{
+		
+		.ant-checkbox {
 			margin-bottom: 3px;
-			&-checked{
-				.ant-checkbox-inner::after{
+			
+			&-checked {
+				.ant-checkbox-inner::after {
 					transform: rotate(45deg) scale(1.6) translate(-50%, -50%);
 				}
 			}
 		}
+		
 		.ant-checkbox-inner {
 			width: 24px;
 			height: 24px;
 			background: #fcfcfd;
 			border: 2px solid #e6e8ec;
 			border-radius: 4px;
-			&::after{
+			
+			&::after {
 				top: 52%;
 				left: 22.5%;
 			}
