--- a/src/pages/Test/dxz-New-SBT/index.module.less
+++ b/src/pages/Test/dxz-New-SBT/index.module.less
@@ -131,6 +131,7 @@
 	display: inline-block;
 	padding-bottom: 12px;
 	user-select: none;
+	
 }
 
 .net-ethereum {
@@ -147,11 +148,11 @@
 	background: #E6E8EC;
 	margin-bottom: 12px;
 }
-.issue-limit-subtitle{
+.subtitle-with-switch{
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	margin-bottom: 12px;
+	margin-bottom: 0px;
 	span:last-child{
 		width: 110px;
 		display: flex;
@@ -187,7 +188,7 @@
 		background: #f4f5f6;
 		border-radius: 12px;
 		transition: all .25s linear;
-		
+		margin: 0 auto;
 		&:hover{
 			
 			.upload-file-filling {
