--- a/src/pages/Test/dxz-New-SBT/index.module.less
+++ b/src/pages/Test/dxz-New-SBT/index.module.less
@@ -199,7 +199,7 @@
 }
 
 .upload-file {
-	z-index: 0;
+	z-index: 1;
 	font-weight: 700;
 	font-size: 15px;
 	display: flex;
@@ -238,11 +238,14 @@
 	background-position: center;
 	user-select: none;
 	transition: all .25s linear;
-	
-	&>.upload-file-filling-button{
+	.upload-file-filling-button{
 		
 		cursor: pointer;
+	}
+	&>.upload-file-filling-button{
+		cursor: pointer;
 		&:hover {
+			z-index: 1;
 			box-shadow: 0px 0px 36px 2px rgb(147 147 150 / 39%);
 		}
 	}
