SBT-preview-img不变形展示

--- a/src/pages/Test/dxz-New-SBT/index.module.less
+++ b/src/pages/Test/dxz-New-SBT/index.module.less
@@ -40,6 +40,10 @@
 	border-radius: 12px;
 	background: #17c964;
 	margin-bottom: 24px;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+	object-fit: cover;
 }
 .SBT-preview-name{
 	font-weight: 600;
